Obertka to Top Block

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
 <header>
-    <div class="obertka">
+    <div class="top_block">
         <div class="main_wrap_with_text-align">
             <div class="border_bottom">
                 <nav class="menu">
