--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <nav class="menu">
                     <ul class="list_style_menu">
                         <li class="link"><a href="#" class="menu_point">home</a></li>
-                        <li class="link"><a href="#" class="menu_point">about</a></li>
-                        <li class="link"><a href="#" class="menu_point">gallery</a></li>
-                        <li class="link"><a href="#" class="menu_point">partners</a></li>
-                        <li class="link"><a href="#" class="menu_point menu_point_mod">contacts</a></li>
+                        <li class="link"><a href="#tabs_navigation" class="menu_point">about</a></li>
+                        <li class="link"><a href="#gallery" class="menu_point">gallery</a></li>
+                        <li class="link"><a href="#sprite_pic" class="menu_point">partners</a></li>
+                        <li class="link"><a href="#block_gradient" class="menu_point menu_point_mod">contacts</a></li>
                     </ul>
                 </nav>
                 <a href="#" class="search_icon"></a>
@@ -54,7 +54,7 @@
     </div>
 </header>
 
-<section class="tabs_navigation">
+<section id="tabs_navigation">
 
     <section>
         <div class="tabs_navigation_contain">
@@ -69,7 +69,7 @@
                     <li class="list"><a href="#tabs-5" class="tab_link">C-Tab</a></li>
                 </ul>
 
-                <input type="text" class="search_line">
+                <input type="text" class="search_line" title="Напиши и искай">
 
             </div>
         </div>
@@ -423,7 +423,7 @@
 
 
 <section>
-    <div class="gallery">
+    <div id="gallery">
         <div class="main_wrap main_wrap_gallery">
             <h3 class="word_Gallery">G<span class="border_bottom_Gallery">aller</span>y</h3>
 
@@ -441,7 +441,7 @@
     </div>
 </section>
 
-<div class="sprite_pic">
+<div id="sprite_pic">
     <div class="main_wrap main_wrap_for_sprite">
         <div class="sprite pic1"></div>
         <div class="sprite pic2"></div>
@@ -476,7 +476,7 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1525.112939509849!2d36.24073436688374!3d49.99403417645445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0ee63b3dd7b%3A0x87cbf7df42b2afa6!2z0LLRg9C70LjRhtGPINCU0ZbQstC-0YfQsCwg0KXQsNGA0LrRltCyLCDQpdCw0YDQutGW0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwg0KPQutGA0LDQuNC90LA!5e0!3m2!1sru!2sru!4v1472755425210" width="100%" height="1080" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
-    <div class="block_gradient">
+    <div id="block_gradient">
         <div class="main_wrap main_wrap_footer">
             <h2 class="our_contacts">our contacts</h2>
             <form class="form_footer">
