--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/font.css" type="text/css" rel="stylesheet">
-
+    <link href="css/jquery.bxslider.min.css" rel="stylesheet" type="text/css">
+    <link href="css/style_for_next_prev_buttons.css" rel="stylesheet" type="text/css">
 
 
     <link href="css/font_for_footer.css" type="text/css" rel="stylesheet">
@@ -219,7 +220,7 @@
 
                     <div class="change_color">
                         <div class="border_circle icon-using_bootstrap"></div>
-                        <h3 class="font_Exo2">Using bootstrap grid</h3>
+                        <h3 class="font_Exo2">333Using bootstrap grid</h3>
                     </div>
 
 
@@ -286,7 +287,7 @@
 
                     <div class="change_color">
                         <div class="border_circle icon-using_bootstrap"></div>
-                        <h3 class="font_Exo2">Using bootstrap grid</h3>
+                        <h3 class="font_Exo2">444Using bootstrap grid</h3>
                     </div>
 
 
@@ -353,7 +354,7 @@
 
                     <div class="change_color">
                         <div class="border_circle icon-using_bootstrap"></div>
-                        <h3 class="font_Exo2">Using bootstrap grid</h3>
+                        <h3 class="font_Exo2">555Using bootstrap grid</h3>
                     </div>
 
 
@@ -455,17 +456,42 @@
     <div class="block_last_review">
 
         <div class="main_wrap m_w_for_last_review">
-            <h3 class="last_review">Last Review</h3>
-            <div class="foto_and_info clearfix">
-                <div class="foto"></div>
-                <h2 class="name">Alice Doe</h2>
-                <p class="name info"> «Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat»</p>
-            </div>
+
+
+                    <h3 class="last_review">Last Review</h3>
+            <ul class="bxslider">
+                <li>
+                    <div class="foto_and_info clearfix">
+                        <div class="foto"></div>
+                        <h2 class="name">Alice Doe</h2>
+                        <p class="name info"> «Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat»</p>
+                    </div>
+                </li>
+
+                <li>
+
+                    <div class="foto_and_info clearfix">
+                        <div class="foto"></div>
+                        <h2 class="name">Alice Doe</h2>
+                        <p class="name info"> «Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat»</p>
+                    </div>
+                </li>
+                <li>
+
+                    <div class="foto_and_info clearfix">
+                        <div class="foto"></div>
+                        <h2 class="name">Alice Doe</h2>
+                        <p class="name info"> «Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat»</p>
+                    </div>
+                </li>
+            </ul>
 
         </div>
 
-            <a href="#" class="previous"></a>
-            <a href="#" class="next"></a>
+        <div class="outside">
+            <p class="next-prev_buttons_position"><span id="slider-prev"></span>  <span id="slider-next"></span></p>
+        </div>
+
 
 
     </div>
@@ -529,7 +555,6 @@
 </footer>
 
 <script src="js/script.js"></script>
-<script src="js/script-gallery.js"></script>
 
 
 </body>
